seaqt/QtMultimedia/gen_qmediadevices.h

class QAudioDevice;
class QCameraDevice;
class QMediaDevices;
class QMetaObject;
class QObject;
typedef struct QAudioDevice QAudioDevice;
typedef struct QCameraDevice QCameraDevice;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QMediaDevices QMediaDevices;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QTimerEvent QTimerEvent;
QMediaDevices* QMediaDevices_new();
QMediaDevices* QMediaDevices_new2(QObject* parent);
QMetaObject* QMediaDevices_metaObject(const QMediaDevices* self);
void* QMediaDevices_metacast(QMediaDevices* self, const char* param1);
int QMediaDevices_metacall(QMediaDevices* self, int param1, int param2, void** param3);
struct miqt_string QMediaDevices_tr(const char* s);
struct miqt_array /* of QAudioDevice* */  QMediaDevices_audioInputs();
struct miqt_array /* of QAudioDevice* */  QMediaDevices_audioOutputs();
struct miqt_array /* of QCameraDevice* */  QMediaDevices_videoInputs();
QAudioDevice* QMediaDevices_defaultAudioInput();
QAudioDevice* QMediaDevices_defaultAudioOutput();
QCameraDevice* QMediaDevices_defaultVideoInput();
void QMediaDevices_audioInputsChanged(QMediaDevices* self);
void QMediaDevices_connect_audioInputsChanged(QMediaDevices* self, intptr_t slot);
void QMediaDevices_audioOutputsChanged(QMediaDevices* self);
void QMediaDevices_connect_audioOutputsChanged(QMediaDevices* self, intptr_t slot);
void QMediaDevices_videoInputsChanged(QMediaDevices* self);
void QMediaDevices_connect_videoInputsChanged(QMediaDevices* self, intptr_t slot);
struct miqt_string QMediaDevices_tr2(const char* s, const char* c);
struct miqt_string QMediaDevices_tr3(const char* s, const char* c, int n);
bool QMediaDevices_override_virtual_metaObject(void* self, intptr_t slot);
QMetaObject* QMediaDevices_virtualbase_metaObject(const void* self);
bool QMediaDevices_override_virtual_metacast(void* self, intptr_t slot);
void* QMediaDevices_virtualbase_metacast(void* self, const char* param1);
bool QMediaDevices_override_virtual_metacall(void* self, intptr_t slot);
int QMediaDevices_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QMediaDevices_override_virtual_event(void* self, intptr_t slot);
bool QMediaDevices_virtualbase_event(void* self, QEvent* event);
bool QMediaDevices_override_virtual_eventFilter(void* self, intptr_t slot);
bool QMediaDevices_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QMediaDevices_override_virtual_timerEvent(void* self, intptr_t slot);
void QMediaDevices_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QMediaDevices_override_virtual_childEvent(void* self, intptr_t slot);
void QMediaDevices_virtualbase_childEvent(void* self, QChildEvent* event);
bool QMediaDevices_override_virtual_customEvent(void* self, intptr_t slot);
void QMediaDevices_virtualbase_customEvent(void* self, QEvent* event);
bool QMediaDevices_override_virtual_connectNotify(void* self, intptr_t slot);
void QMediaDevices_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QMediaDevices_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QMediaDevices_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
const QMetaObject* QMediaDevices_staticMetaObject();
void QMediaDevices_delete(QMediaDevices* self);